  ODEFixedJoint. (patch 2983970)
- eventmanager: Disconnecting/connecting event handlers while an event was handled
  could result in handlers not being called (patch 2983964).
- GLRenderer: OpenGL errors could leak through into Python and produce exceptions
  on unrelated PyOpenGL calls. The error flag is now cleared at the end of
  the C++ rendering code (bug #2974422).
- sequence: SeqString comparison doesn't convert its argument into fresh
  SeqStrings anymore. This means comparing a SeqString with a regular string
  uses regular string comparison semantics. It also means, a SeqString that
  has a number replaced by a string containing a number will treat this part
  as a string, not a number. This change considerably increases performance when
  sorting large string lists. 
- sequence: buildSequences() didn't work properly when assumeFiles was set to
  True and there was more than one number inside the path. Thanks to Scott Ballard.
- viewer: Joystick support was partially broken (copy&paste error). Thanks
  to Mariano Sospiro for providing a patch.
- mat3/mat4: The decompose() method doesn't raise a ZeroDivisionError anymore
  when called on a null matrix. Instead, it just returns a scaling part that
  is 0.
- Bugfix (2909382): The world transform didn't properly update in certain
  circumstances. This was because the slot dependency was set between the world
  transforms, but the computation was actually using all the local transforms.

Changes from cgkit-2.0.0alpha8 to cgkit-2.0.0alpha9:

New features:

- New module sloargs to parse compiled RenderMan shaders.
- New module pointcloud to read/write RenderMan point cloud files.
- New module sequence that contains functionality to deal with numbered
  (file) sequences. There are also new utilities seqls.py, seqmv.py, seqcp.py
  and seqrm.py (the equivalent of ls, mv, cp, rm but they work on file
  sequences).

Bug fixes/enhancements:

- ribexport: A custom rib string can now also be added to light sources