@@ -39,6 +39,8 @@ Bug fixes/enhancements:
 - GLRenderer: OpenGL errors could leak through into Python and produce exceptions
   on unrelated PyOpenGL calls. The error flag is now cleared at the end of
   the C++ rendering code (bug #2974422).
+- sequence: SeqString has a new method fnmatch() to do file name matching
+  that may have wildcards as well as number substitution patterns (# or @).
 - sequence: SeqString comparison doesn't convert its argument into fresh
   SeqStrings anymore. This means comparing a SeqString with a regular string
   uses regular string comparison semantics. It also means, a SeqString that
